infra/k8s/control-plane/control-plane.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sentinel-control-plane
  namespace: sentinel-control-plane
  labels:
    app: control-plane
spec:
  replicas: 1
  selector:
    matchLabels:
      app: control-plane
  template:
    metadata:
      labels:
        app: control-plane
    spec:
      serviceAccountName: sentinel-control-plane
      containers:
        - name: java-api
          image: sentinel-control-plane:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: sentinel-control-plane
  namespace: sentinel-control-plane
spec:
  selector:
    app: control-plane
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
